after final runs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,10 @@ dependencies = [
     "numpy",
     "pandas",
     "matplotlib",
-    "scipy"
+    "scipy",
+
+    # UI
+    "gradio"
 ]
 
 [project.optional-dependencies]
