--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,8 @@
-# API Keys
-OPENAI_API_KEY=your_openai_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+LANGSMITH_TRACING="true"
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_API_KEY=your_api_key
+LANGSMITH_PROJECT="crypto-agent"
 
-# CoinGecko API (free tier available)
-COINGECKO_API_KEY=your_coingecko_api_key_here
-
-# Etherscan API
-ETHERSCAN_API_KEY=your_etherscan_api_key_here
-
-# Serper API (Google Search)
-SERPER_API_KEY=your_serper_api_key_here
-
-# Reddit API
-REDDIT_CLIENT_ID=your_reddit_client_id
-REDDIT_CLIENT_SECRET=your_reddit_client_secret
-REDDIT_USER_AGENT=crypto-agent/1.0
-
-# LangSmith (optional for tracing)
-LANGCHAIN_TRACING_V2=true
-LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
-LANGCHAIN_API_KEY=your_langsmith_api_key
-LANGCHAIN_PROJECT=crypto-agent
+OPENAI_API_KEY=your_api_key
+SERPER_API_KEY=your_api_key
+TAAPI_API_KEY=your_api_key
